- plugins can use a tabbook-layout
- display status of R-process in the statusbar
- run R in a separate thread

--- Version 0.2.0 - Aug-01-2004 ---
- Use a PHP-backend for the plugins
- Run R embedded (currently synchronous)
- Some changes in plugin-creation
- Use pretty HTML-output
- got rid of ui-files
- added descriptive statistics plugin
- lots of small changes I didn't document properly

--- Version 0.1.0 - Nov-19-2002 ---
- Initial features:
- A simple backend-interface communicating with R via stdin/stdout
- Asynchronous command stack
- A simple window for watching communication with R
- Ability to issue commands manually
- Editor window including meta information on the variables
- Copy-and-Paste with some quirks
- highlighting of invalid data
- load/save of R-workspace (load only works for RKWard data)
- Automatic generation of menu-structure and plugin-dialogs from XML-files
- Supported plugin widgets: textfield, variable-selector, variable-slot, radiobuttons
- independent samples t-test plugin