@@ -17,7 +17,6 @@ small stuff to do soon
 mid-term stuff
 - add XML-parsing helper functions and error-checking
 - restructure source-layout
-- allow RCommand-chains that will be executed in order
 
 stuff to do before the thing is usable
 - use a cool new RHistory-Widget for the RKWatch
